--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -169,6 +169,25 @@
         </ul>
     </li>    
 
+    <% if (url == '/files/list' || url == '/files/add') { %>
+      <li class="treeview active">
+    <% } else { %>
+      <li class="treeview">
+    <% } %>
+        <a href="#">
+          <i class="fa fa-folder"></i> <span>Files</span>
+          <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li class="<%= (url == '/polls/list') ? 'active' : '' %>">
+            <a href="/files/list"><i class="fa fa-circle-o"></i> List Files </a>
+          </li>
+          <li class="<%= (url == '/polls/add') ? 'active' : '' %>">
+            <a href="/files/add"><i class="fa fa-circle-o"></i> Add Files </a>
+          </li>
+        </ul>
+    </li>    
+
     <% if(url == '/vessels/list' || url == '/sectors/list' || url ==
     '/terminals/list' || url == '/line_agents/list' || url ==
     '/break_bulk_vessels/list' || url == '/break_bulk_sectors/list' || url ==
